--- a/src/main.css
+++ b/src/main.css
@@ -24,3 +24,41 @@ img {
   margin: 20px 0;
   max-width: 200px;
 }
+
+
+.container {
+  display: grid;
+  grid-template-areas:
+    "header header header"
+    "nav sketch rightside"
+    "footer footer footer";
+  grid-template-rows: 60px 1fr 60px;
+  grid-template-columns: 20% 1fr 15%;
+  grid-column-gap: 10px;
+  grid-row-gap: 15px;
+  grid-gap: 10px;
+  height: 100vh;
+  margin: 0;
+  background: gold;
+  }
+/* header, footer, article, nav, div {
+  padding: 20px;
+  background: "#aaaaaa";
+} */
+.pageHeader {
+  grid-area: header;
+  background: silver;
+}
+.pageFooter {
+  grid-area: footer;
+}
+.sketchArea {
+  grid-area: sketch;
+  background: black;
+  }
+.mainNav {
+  grid-area: nav;
+  }
+.rightSideArea {
+  grid-area: rightside;
+  }
