--- a/src/main.css
+++ b/src/main.css
@@ -39,7 +39,7 @@ img {
   grid-gap: 10px;
   height: 100vh;
   margin: 0;
-  background: gold;
+  background: darkgrey;
   }
 /* header, footer, article, nav, div {
   padding: 20px;
