--- a/src/main.css
+++ b/src/main.css
@@ -81,3 +81,12 @@ h3, h4 {
   margin-top: 2px;
   margin-bottom: 2px;
 }
+a:link {
+  text-decoration: none;
+  color: #aaaaaa;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #aaaaaa;
+}
