--- a/src/main.css
+++ b/src/main.css
@@ -54,6 +54,7 @@ img {
 }
 .sketchArea {
   grid-area: sketch;
+  text-align: left;
   background: #010214;
 }
 .mainNav {
@@ -118,4 +119,6 @@ a:visited {
 
 .mainContent {
   text-align: left;
+  padding-left: 6px;
+  padding-right: 6px;
 }
