--- a/src/main.css
+++ b/src/main.css
@@ -53,6 +53,7 @@ img {
   text-align: left;
 }
 .sketchArea {
+  margin: 0;
   grid-area: sketch;
   text-align: left;
   background: #010214;
@@ -119,6 +120,35 @@ a:visited {
 
 .mainContent {
   text-align: left;
+  padding-left: 6px;
+  padding-right: 6px;
+}
+
+.sketch-default-container {
+  display: grid;
+  grid-template-rows: 40px 1fr 40px;
+  height: 100%;
+  margin: 0;
+  background: #010214;
+}
+
+.sketch-default-top-item {
+  grid-row: 1;
+  padding-top: 3px;
+  padding-left: 6px;
+  padding-right: 6px;
+  background: #011224;
+}
+.sketch-default-main-item {
+  grid-row: 2;
+  background: #010214;
+}
+.sketch-default-footer-item {
+  grid-row: 3;
+  background: #011224;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 3px;
   padding-left: 6px;
   padding-right: 6px;
 }
